--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -12,7 +12,4 @@ select {
     margin: 0 auto;
     padding: 11px 0 10px;
     width: 80%;
-    @media (min-width: variables.$tablet) {
-        display: inline;
-    }
 }
