--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,7 +16,7 @@ $open-sans-font: 'Noto Sans', sans-serif;
 
 // Media Queries
 $desktop: 1440px;
-$tablet: 768px;
+$tablet: 775;
 $small-tablet: 660px;
 $medium-mobile: 375px;
 $small-mobile: 340px;
